tests/idris2/interface/interface034/expected
1/1: Building Main (Main.idr)
Error: Expected end of input.

Main:1:1--1:10
 1 | interface Iface | where
     ^^^^^^^^^

